--- a/src/main/java/ni/edu/uni/programacion/views/FrmConversionApp.form
+++ b/src/main/java/ni/edu/uni/programacion/views/FrmConversionApp.form
@@ -59,6 +59,9 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="Temperatura"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnTempActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JButton" name="btnCurr">
           <Properties>
